infra/kubernetes/base/application/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: uptime-sentinel
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: uptime-sentinel
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: uptime-sentinel
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: uptime-sentinel
