infra/kubernetes/base/application/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: uptime-sentinel
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: uptime-sentinel
spec:
  selector:
    app.kubernetes.io/name: uptime-sentinel
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: uptime-sentinel
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
